Add 2 more recipe & organize recipe numbers

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a rel="noreferrer noopener" href="./recipes/turkish-chicken-kebab.html">Turkish Chicken Kebab</a></li>
-      <li><a rel="noreferrer noopener" href=""></a></li>
-      <li><a rel="noreferrer noopener" href=""></a></li>
+      <li>
+        <a
+          aria-label="turkish chicken kebab recipe"
+          rel="noreferrer noopener"
+          href="./recipes/turkish-chicken-kebab.html"
+          >Turkish Chicken Kebab</a
+        >
+      </li>
+      <li>
+        <a aria-label="red lentil recipe" rel="noreferrer noopener" href="./recipes/red-lentil.html"></a>
+      </li>
+      <li>
+        <a aria-label="bazlama recipe" rel="noreferrer noopener" href="./recipes/bazlama.html"></a>
+      </li>
     </ul>
   </body>
 </html>
