--- a/recipes/turkish-chicken-kebab.html
+++ b/recipes/turkish-chicken-kebab.html
@@ -29,4 +29,25 @@ Here's the list of ingredients formatted as an unordered list in HTML: ```html
   <li>2 ½ pounds boneless, skinless chicken thighs, halved</li>
   <li>4 long metal skewers</li>
 </ul>
-```
+<h3>Steps</h3>
+<ul>
+  <li>
+    Whisk yogurt, garlic, olive oil, lemon juice, ketchup, red pepper flakes, salt, cumin, black pepper, paprika, and
+    cinnamon together in a large bowl.
+  </li>
+  <li>
+    Place chicken thigh halves into the yogurt marinade and coat them thoroughly on all sides. Cover the bowl with
+    plastic wrap and refrigerate for 2 to 8 hours.
+  </li>
+  <li>Preheat an outdoor grill for medium-high heat and lightly oil the grate.</li>
+  <li>
+    Using 2 skewers for each kebab, thread half of the chicken thighs onto each pair of skewers, making a fairly thick
+    "log" shape.
+  </li>
+  <li>
+    Place kebabs on the preheated grill. Do not try to turn them until they begin to unstick from the grill, 3 or 4
+    minutes. Turn kebabs and grill the other side for 3 to 4 minutes. Continue cooking and turning until the chicken is
+    no longer pink in the center, about 6 minutes more. An instant-read thermometer inserted into the center should read
+    at least 165 degrees F (74 degrees C).
+  </li>
+</ul>
