Add red lentil soup recipe page with instructions and ingredients

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         >
       </li>
       <li>
-        <a aria-label="red lentil recipe" rel="noreferrer noopener" href="./recipes/red-lentil.html"></a>
+        <a aria-label="red lentil recipe" rel="noreferrer noopener" href="./recipes/red-lentil.html"
+          >Turkish Red Lentil Soup</a
+        >
       </li>
       <li>
         <a aria-label="bazlama recipe" rel="noreferrer noopener" href="./recipes/bazlama.html"></a>
