--- a/recipes/red-lentil.html
+++ b/recipes/red-lentil.html
@@ -1,9 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
-</html>
+<h1>Turkish Chicken Kebab</h1>
+<img
+  src="https://www.allrecipes.com/thmb/4XgKVzR-UO8M_ukN0oqkNWrSAKc=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7568925-turkish-red-lentil-soup-with-mint-trish-4x3-1-70c42b6fd2004443841f072db2fa4840.jpg"
+  alt="Turkish Red lentil soup recipe"
+  height="250"
+  width="250"
+/>
+<h3>Description</h3>
+<p>
+  This Turkish red lentil soup has dynamic flavors and a lovely, mild heat, much like one you'd find at a Turkish
+  restaurant. I make a big batch and eat it for lunch with crusty bread for an entire week. Serve with additional mint
+  and lemon wedges if desired.
+</p>
+<h3>Ingredients</h3>
+Here's the list of ingredients formatted as an unordered list in HTML: ```html
+<ul>
+  <li>2 tablespoons olive oil</li>
+  <li>½ onion, diced</li>
+  <li>1 clove garlic, minced</li>
+  <li>¼ cup diced tomatoes, drained</li>
+  <li>5 cups chicken stock</li>
+  <li>½ cup red lentils</li>
+  <li>¼ cup fine bulgur wheat</li>
+  <li>¼ cup rice</li>
+  <li>2 tablespoons tomato paste</li>
+  <li>1 tablespoon dried mint</li>
+  <li>1 teaspoon paprika</li>
+  <li>½ teaspoon cayenne pepper (Optional)</li>
+  <li>salt and ground black pepper to taste</li>
+</ul>
+<h3>Steps</h3>
+<ul>
+  <li>
+    Heat oil in a large pot over medium heat. Add onion and sauté until beginning to soften, about 2 minutes. Stir in
+    garlic and cook for 2 minutes. Add diced tomatoes and cook for 10 minutes.
+  </li>
+  <li>
+    Stir in chicken stock, lentils, bulgur, rice, tomato paste, mint, paprika, cayenne pepper, salt, and black pepper;
+    bring to a boil.
+  </li>
+  <li>Reduce heat to medium-low and simmer until lentils and rice are tender, about 30 minutes.</li>
+  <li>Puree soup with an immersion blender until smooth.</li>
+</ul>
