Add Bazlama recipe page with description, ingredients, and directions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
       </li>
       <li>
-        <a aria-label="bazlama recipe" rel="noreferrer noopener" href="./recipes/bazlama.html"></a>
+        <a aria-label="bazlama recipe" rel="noreferrer noopener" href="./recipes/bazlama.html">Bazlama</a>
       </li>
     </ul>
   </body>
