refactor the steps section ul to ol

--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -30,8 +30,8 @@
       <li>4 cups all-purpose flour</li>
     </ul>
 
-    <h3>Directions</h3>
-    <ul>
+    <h3>Steps</h3>
+    <ol>
       <li>
         Dissolve the yeast, sugar, and salt in the warm water. Add the water and yogurt to the flour and mix well. The
         dough will be soft but not sticky. Turn the dough out onto a lightly floured surface and shape it into a ball.
@@ -47,6 +47,6 @@
         bread and wrap it in a clean kitchen towel to keep warm.
       </li>
       <li>Repeat with the remaining dough rounds. Store any leftover flatbreads in an airtight container.</li>
-    </ul>
+    </ol>
   </body>
 </html>
