Add CSS Layout for Assignment

--- a/index.html
+++ b/index.html
@@ -3,28 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li>
-        <a
-          aria-label="turkish chicken kebab recipe"
-          rel="noreferrer noopener"
-          href="./recipes/turkish-chicken-kebab.html"
-          >Turkish Chicken Kebab</a
-        >
-      </li>
-      <li>
-        <a aria-label="red lentil recipe" rel="noreferrer noopener" href="./recipes/red-lentil.html"
-          >Turkish Red Lentil Soup</a
-        >
-      </li>
-      <li>
-        <a aria-label="bazlama recipe" rel="noreferrer noopener" href="./recipes/bazlama.html">Bazlama</a>
-      </li>
-    </ul>
+    <div class="header">
+      <h1>Odin Recipes</h1>
+    </div>
+    <div class="topnav">
+      <a aria-label="turkish chicken kebab recipe" rel="noreferrer noopener" href="./recipes/turkish-chicken-kebab.html"
+        >Turkish Chicken Kebab</a
+      >
+      <a aria-label="red lentil recipe" rel="noreferrer noopener" href="./recipes/red-lentil.html"
+        >Turkish Red Lentil Soup</a
+      >
+      <a aria-label="bazlama recipe" rel="noreferrer noopener" href="./recipes/bazlama.html">Bazlama</a>
+    </div>
   </body>
 </html>
